<resources>
    <string name="app_name">Go-Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="takephoto">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cv_clicked">CV CLICKED</string>
    <string name="title_home">Monitor</string>
    <string name="title_dashboard">Control</string>
    <string name="title_area">AREA</string>
    <string name="title_last_update">Last Update: </string>
    <string name="value_last_update">null</string>
    <string name="title_live_time">Live Time: </string>
    <string name="value_live_time">0 minutes ago</string>
    <string name="button_login_text">Login</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_username">Username</string>
    <string name="value_update_indicator">*****</string>
    <string name="title_tv_analog_input">Analog Input</string>
    <string name="title_tv_digital_input">Digital Input</string>
    <string name="title_tv_digital_output">Digital Output</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">Subtitle</string>
    <string name="saved_log_stat">log_stat</string>
    <string name="saved_user_name">username</string>
    <string name="saved_full_name">fullname</string>
    <string name="saved_email">email</string>
    <string name="saved_role">role</string>
    <string name="saved_token">token</string>
    <string name="snackbar_settings">Settings function will be added soon:)</string>
</resources>
