<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/title_area"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title.Inverse" />

                <TextView
                    android:id="@+id/tv_last_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/tv_area"
                    android:layout_toRightOf="@+id/tv_area"
                    android:text="@string/title_last_update"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

                <TextView
                    android:id="@+id/tv_last_update_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_last_update"
                    android:layout_toEndOf="@+id/tv_last_update"
                    android:layout_toRightOf="@+id/tv_last_update"
                    android:text="@string/value_last_update"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

                <TextView
                    android:id="@+id/tv_live_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_last_update"
                    android:layout_toEndOf="@+id/tv_area"
                    android:layout_toRightOf="@+id/tv_area"
                    android:text="@string/title_live_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

                <TextView
                    android:id="@+id/tv_live_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_live_time"
                    android:layout_toRightOf="@+id/tv_live_time"
                    android:text="@string/value_live_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />
            </RelativeLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:menu="@menu/navigation_bottom" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
